# AresWave

./: LICENSE  Mars_MT  Mars_PSO  Mars_PSO_Earth.py  Mars_PSO_Earth_globalscale.py  Mars_PSO_S0133a copy.py  Mars_PSO_S0133a.py  Mars_PSO_S0152a copy.py  Mars_PSO_S0152a.py  Mars_PSO_S0167a copy.py  Mars_PSO_S0167a.py  Mars_PSO_S0167b copy.py  Mars_PSO_S0167b.py  Mars_PSO_S0185a copy.py  Mars_PSO_S0185a.py  Mars_PSO_S0234c copy.py  Mars_PSO_S0234c.py  Mars_PSO_S1094b copy.py  Mars_PSO_S1094b.py  Mars_PSO_S1102a copy.py  Mars_PSO_S1102a.py  Mars_PSO_S1153a copy.py  Mars_PSO_S1153a.py  Mars_PSO_S1415a copy.py  Mars_PSO_S1415a.py  Mars_PSO_ZOOM.py  Mars_bayesian  Mars_bayesian_Earth.py  Mars_bayesian_S0133a.py  Mars_bayesian_S0167b.py  Mars_bayesian_S0185a.py  Mars_bayesian_S0234c.py  Mars_bayesian_S1094b.py  Mars_bayesian_S1102a.py  Mars_bayesian_S1153a.py  Mars_bayesian_S1415a.py  Mars_faultsdiagram.py  Mars_gridsearch  Mars_gridsearch_S0185a.py  Mars_inversion  (+9 more)
.github/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
AresWave/: .gitignore  README.md  environment.yml  setup.py
SAC/: IU_MAJO_00_BHR.sac  IU_MAJO_00_BHT.sac  IU_MAJO_00_BHZ.sac  IV_AIO__HHR.sac  IV_AIO__HHT.sac  IV_AIO__HHZ.sac  S0105a01.sac  S0105a02.sac  S0105a03.sac  S0105a_bandpass01.sac  S0105a_bandpass02.sac  S0105a_bandpass03.sac  S0105a_enz01.sac  S0105a_enz02.sac  S0105a_enz03.sac  S0105a_trlq01.sac  S0105a_trlq02.sac  S0105a_trlq03.sac  S0105a_trlq04.sac  S0105a_trlq05.sac  S0105a_trlq06.sac  S0105a_trlq07.sac  S0105a_trlq_denois01.sac  S0105a_trlq_denois02.sac  S0105a_trlq_denois03.sac  (+1294 more)
(+5063 files in other folders)
